# genscai

./: .gitignore  01 - Information Extraction.ipynb  01 - Information Retrieval.ipynb  02 - Information Extraction.ipynb  02.2 - Information Extraction - HuggingFace.ipynb  03 - Embedding.ipynb  03.1 - Embedding.ipynb  03.2 - Embedding - Specter.ipynb  04 - Clustering.ipynb  CLAUDE.md  README.md  pyproject.toml
00 - getting started/: README.md
00 - getting started/notebooks/: 01 - Environment Setup.ipynb
01 - data collection/: README.md
01 - data collection/notebooks/: 01 - Data Collection - Abstracts from MIDAS.ipynb  02 - Data Collection - Articles from medRxiv and arXiv.ipynb  03 - Data Collection - Paperclip.ipynb
02 - text analysis/: README.md
02 - text analysis/notebooks/: 01 - Information Extraction - OpenAI.ipynb  02 - Information Extraction - LangChain.ipynb  03 - Information Extraction - LangExtract.ipynb  04 - Embeddings - Vector Search.ipynb  05 - Embeddings - SPECTER.ipynb  06 - Embeddings - SPECTER2.ipynb  07 - Embeddings - NV-Embed.ipynb  08 - Embeddings - Clustering and Visualization.ipynb  09 - Classification - Local LLMs.ipynb  10 - Classification - Prompt Evaluation.ipynb
03 - knowledge graphs/: README.md
04 - semantic search/: README.md
05 - model optimization/: README.md
06 - agents/: README.md
07 - literature research/: README.md  aimu_api_sketch.md
08 - disease simulation/: README.md
09 - evaluation/: README.md
data/: inter_model_results.txt  midas_test.json  midas_validate.json  modeling_paper_ids.txt  modeling_papers.json  prompt_catalog.db  training_non_modeling_papers.json
genscai/: __init__.py  classification.py  corpus.py  data.py  knowledge_base.py  medrxiv.py  medxriv.py  models.py  paths.py  prompts.py  research.py  retrieval.py  simulation.py  tools.py  training.py  utils.py
mcp/: server.py
notebooks/: 00 - Environment Setup.ipynb  00 - Setup.ipynb  01 - Abstract Retrieval from MIDAS.ipynb  01 - Information Retrieval.ipynb  01.1 - Data Collection - Abstracts from MIDAS.ipynb  01.2 - Data Collection - Articles from medRxiv and arXiv.ipynb  01.3 - Data Collection - Paperclip.ipynb  02 - Article Download from medRxiv and arXiv.ipynb  02.1 - Information Extraction - OpenAI.ipynb  02.2 - Information Extraction - HuggingFace.ipynb  02.2 - Information Extraction - LangChain.ipynb  02.3 - Information Extaction - LangExtract.ipynb  02.3 - Information Extraction - LangExtract.ipynb  03.1 - Embedding.ipynb  03.1 - Embeddings - Vector Search.ipynb  03.1 - Information Extraction - OpenAI.ipynb  03.2 - Embedding - Specter.ipynb  03.2 - Embeddings - SPECTER.ipynb  03.2 - Information Extraction - LangChain.ipynb  03.3 - Embedding - Specter2.ipynb  03.3 - Embeddings - SPECTER2.ipynb  03.3 - Information Extraction - LangExtract.ipynb  03.4 - Embedding - NV-embed.ipynb  03.4 - Embeddings - NV-Embed.ipynb  03.5 - Embeddings - Clustering and Visualization.ipynb  04 - Clustering.ipynb  04.1 - Classification - Local LLMs.ipynb  04.1 - Embeddings - Chroma.ipynb  04.2 - Classification - Prompt Evaluation.ipynb  04.2 - Embeddings - SPECTER.ipynb  04.3 - Embeddings - SPECTER2.ipynb  04.4 - Embeddings - NV-Embed.ipynb  05 - Embedding Clustering and Visualization.ipynb  05.1 - Classification Training.ipynb  05.1 - Classification.ipynb  05.1 - Knowledge Graph - GraphRAG.ipynb  05.2 - Classification Evaluation.ipynb  05.2 - Classification.ipynb  05.2 - Knowledge Graph - LangChain.ipynb  05.3 - Classification Comparison.ipynb  (+42 more)
scripts/: 01_retrieve_information.py  02_classification_test.py  02_classification_validation.py  03_classification_training.py  04_classification_cross_model_validation.py  05_classification.py  06_classification_all_models.py  07.1_medrxiv_download.py  07.1_medxriv_download.py  07.2_medrxiv_knowledge_base.py  07.2_medxriv_knowledge_base.py  07_update_medxriv_knowledge_base.py  08.agent.py  08_agent.py  08_mcp.py  llama_3_2_good.txt  mistral_nemo_good.txt  papers_json_to_csv.py
src/: 01_retrieve_information.py  02_classification_validation.py  03_classification_training.py  requirements.txt
streamlit/: chatbot.py  chatbot_with_memory.py  chatbot_with_tools.py  chatbot_with_tools_ollama.py  genscai_chatbot.py  genscai_chatbot_hf.py
tests/: test_corpus.py  test_knowledge_base.py  test_models.py  test_prompts.py  test_research.py  test_simulation.py
(+41 files in other folders)
