[project]
name = "genscai"
version = "0.1.0"
description = "Generative AI Tools and Recipes for Science and Research"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

# pip dependencies
# install with `pip install -e .`
dependencies = [
    "aimu[all]",
    "beautifulsoup4",
    "torch",
    "pandas",
    "tinydb",
    "tqdm",
    "pandas",
    "numpy",
    "seaborn",
    "chromadb",
    "langchain",
    "langchain-text-splitters",
    "langchain-experimental",
    "langchain-community",
    "langchain-ollama",
    "json_repair", # indirect dependency of langchain-experimental
    "streamlit",
    "scipy", # indirect dependency. force version bump to latest to support numpy 2
    "pyarrow",
    "python-dotenv",
    "nest_asyncio",
    "watchdog>=6.0.0",
]

# optional pip dependencies
# install with `pip install -e '.[dev]'`
[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]
notebooks = [
    "ipykernel",
    "ipywidgets"
]
cuda = [
    "pynvml"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["genscai*"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.uv.sources]
aimu = { path = "../aimu", editable = true }
