[project]
name = "genscai"
version = "0.1.0"
description = "Generative AI Tools and Recipes for Science and Research"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}

dependencies = [
    "aimu[all]>=0.10.1",
    "beautifulsoup4",
    "pandas",
    "tinydb",
    "tqdm",
    "numpy",
    "seaborn",
    "chromadb",
    "langchain",
    "langchain-text-splitters",
    "langchain-experimental",
    "langchain-community",
    "langchain-ollama",
    "json_repair", # indirect dependency of langchain-experimental
    "streamlit",
    "scipy", # indirect dependency. force version bump to latest to support numpy 2
    "pyarrow",
    "python-dotenv",
    "nest_asyncio",
    "watchdog",
    "smolagents[toolkit]",
    "litellm",
    "langextract",
    "bitsandbytes",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]
notebooks = [
    "ipykernel",
    "ipywidgets",
    "nbformat",
    "nbconvert"
]
cuda = [
    "nvidia-ml-py"
]
# Agent frameworks compared in the literature research use case. aimu, smolagents, langchain,
# langchain-ollama, and chromadb are already core dependencies.
literature_research = [
    "langgraph",
    "langchain-chroma",
    "pydantic-ai-slim[openai]",
    "crewai",
    "crewai-tools",
    "arxiv",
    "llama-index",
    "llama-index-llms-ollama",
    "llama-index-embeddings-ollama",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["genscai*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.uv.sources]
aimu = { path = "../aimu", editable = true }
